# opp_repl

./: .gitignore  PLAN.md  README.md  WORKFLOWS.md  pyproject.toml  setenv  test_overlay_build.py
.agent/rules/: mcp.md
.github/workflows/: publish-to-pypi.yml
doc/: bisecting.md  building.md  chart_tests.md  cluster.md  comparing_simulations.md  comparison_tests.md  concepts.md  coverage.md  feature_tests.md  fingerprint_tests.md  getting_started.md  github_actions.md  installation.md  mcp_server.md  module_image_tests.md  omnetpp_projects.md  opp_files.md  optimization.md  overlay_builds.md  overview.md  parameter_optimization.md  profiling.md  projects.md  repl.md  running_simulations.md  sanitizer_tests.md  simulation_configs.md  simulation_projects.md  simulation_workspaces.md  smoke_tests.md  speed_tests.md  statistical_tests.md  task_results.md  tasks.md
etc/: aloha.opp  canvas.opp  cqn.opp  dyna.opp  embedding.opp  embedding2.opp  fifo.opp  histograms.opp  hypercube.opp  inet.opp  neddemo.opp  omnetpp.opp  openstreetmap.opp  osg-earth.opp  osg-indoor.opp  osg-intro.opp  osg-satellites.opp  petrinets.opp  queueinglib.opp  queueinglibext.opp  queuenet.opp  routing.opp  sockets.opp  tictoc.opp  wiredphy.opp
opp_repl/: __init__.py  __main__.py  diffcharts.py  main.py  repl.py
opp_repl/common/: __init__.py  cluster.py  compile.py  github.py  ide.py  mcp.py  mcp_bridge.py  mcp_client.py  summary.py  task.py  util.py
opp_repl/documentation/: __init__.py  chart.py  html.py  ned.py
opp_repl/etc/: cqn.opp  embedding.opp  omnetpp.opp  queueinglib.opp  tictoc.opp
opp_repl/opp/: aloha.opp  canvas.opp  cqn.opp  dyna.opp  fifo.opp  histograms.opp  hypercube.opp  inet.opp  neddemo.opp  omnetpp.opp  openstreetmap.opp  osg-earth.opp  osg-indoor.opp  osg-intro.opp  osg-satellites.opp  petrinets.opp  queueinglib.opp  queueinglibext.opp  queuenet.opp  routing.opp  simu5g.opp  sockets.opp  tictoc.opp  wiredphy.opp
opp_repl/project/: inet.py
opp_repl/simulation/: __init__.py  build.py  build_omnetpp.py  compare.py  config.py  dependency.py  displaystring.py  eventlog.py  features.py  fingerprint.py  iderunner.py  makefile_vars.py  opp_env_runner.py  optimize.py  overlay.py  project.py  subprocess.py  task.py  workspace.py
opp_repl/test/: __init__.py  all.py  bisect.py  chart.py  comparison.py  coverage.py  feature.py  module_image.py  opp.py  profile.py  release.py  sanitizer.py  self.py  simulation.py  smoke.py  statistical.py  task.py  validation.py
opp_repl/test/fingerprint/: __init__.py  old.py  task.py
opp_repl/test/self/: dependency.py  mcp_uds.py  task.py
opp_repl/test/speed/: __init__.py  store.py  task.py
plan/: build-omnetpp-tasks.md  doc-audit.md  mode-propagation.md  no-default-deps.md  todo.md
python/opp_repl/: __init__.py  main.py  mcp_server.py  repl.py
python/opp_repl/cffi/: __init__.py  event.py  inprocess.py  libinet.py
python/opp_repl/common/: __init__.py  compile.py  eventlog.py  mcp.py  summary.py  task.py  util.py
python/opp_repl/documentation/: chart.py
python/opp_repl/project/: __init__.py  inet.py  omnetpp.py
python/opp_repl/scave/: __init__.py  plot.py
python/opp_repl/simulation/: __init__.py  build.py  compare.py  environment.py  fingerprint.py  iderunner.py  optimize.py  overlay.py  project.py  stdout.py  subprocess.py  task.py  workspace.py
python/opp_repl/test/: all.py  chart.py  release.py  simulation.py  statistical.py  validation.py
python/opp_repl/test/fingerprint/: __init__.py  store.py  task.py
python/opp_repl/test/speed/: task.py
