[project]
name = "opp_repl"
authors = [
    {name = "Levente Mészáros", email = "levy@omnetpp.org"},
]
maintainers = [
    {name = "Levente Mészáros", email = "levy@omnetpp.org"},
    {name = "Rudolf Hornig", email = "rudi@omnetpp.org"},
]
description = "OMNeT++ Python read-eval-print-loop for running and testing simulations"
keywords = ["omnetpp", "omnest", "simulation", "discrete", "event", "model", "repl"]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "pandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: C++",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Education",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://omnetpp.org"
Documentation = "https://github.com/omnetpp/opp_repl/blob/main/README.md"
Changes = "https://github.com/omnetpp/opp_repl/blob/main/CHANGES.md"
Repository = "https://github.com/omnetpp/opp_repl"
Issues = "https://github.com/omnetpp/opp_repl/issues"
Changelog = "https://github.com/omnetpp/opp_repl/commits/main"

[project.optional-dependencies]
mcp = [
    "mcp",
]
cluster = [
    "dask",
    "distributed",
]
chart = [
    "matplotlib",
    "numpy",
]
optimize = [
    "scipy",
    "optimparallel",
]
github = [
    "requests",
]
ide = [
    "py4j",
]
all = [
    "dask",
    "distributed",
    "matplotlib",
    "mcp",
    "numpy",
    "optimparallel",
    "py4j",
    "requests",
    "scipy",
]

[project.scripts]
opp_repl = "opp_repl.repl:run_repl_main"
opp_mount = "opp_repl.simulation.overlay:mount_overlays_main"
opp_unmount = "opp_repl.simulation.overlay:unmount_overlays_main"
opp_build_project = "opp_repl.main:build_project_main"
opp_build_omnetpp = "opp_repl.main:build_omnetpp_main"
opp_clean_omnetpp = "opp_repl.main:clean_omnetpp_main"
opp_clean_project = "opp_repl.main:clean_project_main"
opp_run_simulations = "opp_repl.main:run_simulations_main"
opp_run_all_tests = "opp_repl.main:run_all_tests_main"
opp_run_chart_tests = "opp_repl.main:run_chart_tests_main"
opp_run_feature_tests = "opp_repl.main:run_feature_tests_main"
opp_run_fingerprint_tests = "opp_repl.main:run_fingerprint_tests_main"
opp_run_release_tests = "opp_repl.main:run_release_tests_main"
opp_run_sanitizer_tests = "opp_repl.main:run_sanitizer_tests_main"
opp_run_smoke_tests = "opp_repl.main:run_smoke_tests_main"
opp_run_speed_tests = "opp_repl.main:run_speed_tests_main"
opp_run_statistical_tests = "opp_repl.main:run_statistical_tests_main"
opp_update_chart_test_results = "opp_repl.main:update_chart_test_results_main"
opp_update_fingerprint_test_results = "opp_repl.main:update_fingerprint_test_results_main"
opp_update_speed_test_results = "opp_repl.main:update_speed_test_results_main"
opp_update_statistical_test_results = "opp_repl.main:update_statistical_test_results_main"

[tool.setuptools]
script-files = ["bin/opp_sandbox"]

[tool.setuptools.package-data]
opp_repl = ["opp/*.opp"]

[tool.setuptools.packages.find]
include = ["opp_repl*"]

[tool.setuptools_scm]
write_to = "opp_repl/_version.py"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
